--- a/src/components/Column.astro
+++ b/src/components/Column.astro
@@ -8,7 +8,7 @@ const number = posts.length;
 
 <details class="group fade-in" open>
   <summary
-    class="flex cursor-pointer flex-row items-center justify-center border-b px-2 py-2 group-open:border-0"
+    class="flex cursor-pointer flex-row items-center justify-center border-b px-[var(--page-margin)] py-2 group-open:border-0"
   >
     <h2 class="text-2xl text-[var(--accent-color)] uppercase">{title}</h2>
     <span class="ml-auto text-2xl transition-transform duration-200">
