--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -9,29 +9,37 @@ const base = import.meta.env.BASE_URL;
 const currentPage = Astro.url.pathname; // Get the current page's pathname
 ---
 
-<header class="body-text fixed top-0 z-10 w-full bg-white px-2 py-2">
+<header
+  class="body1 fade-in fixed top-0 z-10 w-full bg-white px-[var(--page-margin)] py-4 pt-[var(--page-margin)] md:pt-4 2xl:py-6"
+>
   <input type="checkbox" id="nav-toggle" class="peer hidden" />
 
   <div class="flex flex-row items-center justify-between">
-    <h1 class="heading3 font-bold tracking-tight">
+    <h1 class="heading2 font-bold tracking-tight">
       <a href="/" class="!no-underline hover:text-gray-400">Munus Shih</a>
     </h1>
 
-    <label for="nav-toggle" class="heading3 z-50 cursor-pointer"> Menu </label>
+    <label for="nav-toggle" class="heading2 z-50 cursor-pointer"> Menu </label>
   </div>
 
   <nav
-    class="relaitve pointer-events-none fixed inset-0 z-[999] flex h-screen w-full flex-col items-center justify-center bg-black text-white opacity-0 transition-all duration-300 peer-checked:pointer-events-auto peer-checked:opacity-100"
+    class="pointer-events-none absolute inset-0 z-[999] flex h-screen w-full flex-col items-center justify-center bg-black text-white opacity-0 transition-all duration-300 peer-checked:pointer-events-auto peer-checked:opacity-100"
   >
     <ul class="menu-textsize flex flex-col items-center justify-center gap-4">
-      <li><a href="/" class="hover:text-gray-400">Home</a></li>
-      <li><a href="/about" class="hover:text-gray-400">About</a></li>
-      <li><a href="/work" class="hover:text-gray-400">Work</a></li>
-      <li><a href="/lab" class="hover:text-gray-400">Laboratory</a></li>
+      <li><a href="/" class="!no-underline hover:text-gray-400">Home</a></li>
+      <li>
+        <a href="/about" class="!no-underline hover:text-gray-400">About</a>
+      </li>
+      <li>
+        <a href="/work" class="!no-underline hover:text-gray-400">Work</a>
+      </li>
+      <li>
+        <a href="/lab" class="!no-underline hover:text-gray-400">Laboratory</a>
+      </li>
 
       <label
         for="nav-toggle"
-        class="heading3 absolute top-2 right-2 cursor-pointer hover:text-gray-400"
+        class="heading2 absolute top-[var(--page-margin)] right-[var(--page-margin)] cursor-pointer hover:text-gray-400"
       >
         Close
       </label>
@@ -39,31 +47,26 @@ const currentPage = Astro.url.pathname; // Get the current page's pathname
   </nav>
 </header>
 
-<style>
-  header {
-    transition: transform 0.3s ease;
-  }
-</style>
-
 <script>
-  const header = document.querySelector("header");
-  let lastScrollY = window.scrollY;
+  import { gsap } from "gsap";
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+  gsap.registerPlugin(ScrollTrigger);
 
-  window.addEventListener("scroll", () => {
-    if (window.scrollY < lastScrollY) {
-      // Scrolling up
-      header.style.transform = "translateY(0)";
+  const navToggle = document.querySelector("#nav-toggle");
 
-      if (window.scrollY > 0) {
-        header.classList.add("shadow-md"); // Add shadow if not at top
-      } else {
-        header.classList.remove("shadow-md"); // Remove shadow if at top
-      }
-    } else {
-      // Scrolling down
-      header.style.transform = "translateY(-100%)";
-    }
-
-    lastScrollY = window.scrollY;
+  ScrollTrigger.create({
+    start: 0,
+    end: "max",
+    onUpdate: ({ direction, scroll }) => {
+      if (navToggle.checked) return;
+      gsap.to("header", {
+        y: direction === -1 ? 0 : "-100%",
+        duration: 0.7,
+        ease: "power1.out",
+      });
+      document
+        .querySelector("header")
+        .classList.toggle("shadow-md", scroll() > 0);
+    },
   });
 </script>
