--- a/src/components/utils/Media.astro
+++ b/src/components/utils/Media.astro
@@ -1,6 +1,13 @@
 ---
 // Media.astro
-const { src, alt, isVideo = false, scaling = 1, cropped = false } = Astro.props;
+const {
+  src,
+  alt,
+  isVideo = false,
+  scaling = 1,
+  cropped = false,
+  widthAuto = false,
+} = Astro.props;
 import { Image } from "astro:assets";
 
 const base = import.meta.env.BASE_URL;
@@ -12,13 +19,13 @@ const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
     <video
       preload="auto"
       src={src}
-      poster={posterSrc}
+      poster={posterSrc || src.replace(/\.(mp4|webm|ogg)$/i, ".jpg")}
       autoplay
       loop
       muted
       playsinline
       webkit-playsinline
-      class={`h-auto w-full object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""}`}
+      class={`media *:h-auto ${widthAuto ? "w-auto" : "w-full"} object-contain ${cropped ? "[clip-path:inset(-3px)]" : ""}`}
       style={{ transform: `scale(${scaling})` }}
       alt={alt}
     >
@@ -27,10 +34,10 @@ const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
   ) : (
     <img
       src={src}
-      alt={"hey"}
+      alt={alt}
       loading="lazy"
       decoding="async"
-      class={`h-auto w-full object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""}`}
+      class={`media h-auto ${widthAuto ? "w-auto" : "w-full"} object-contain ${cropped ? "[clip-path:inset(-3px)]" : ""}`}
     />
   )
 }
