--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,11 @@ import FullListCard from "@/components/cards/FullListCard.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 ---
 
-<BasicLayout title={`About≈${SITE_TITLE}`} description={SITE_DESCRIPTION}>
+<BasicLayout
+  title={`About≈${SITE_TITLE}`}
+  description={SITE_DESCRIPTION}
+  image={`/thumbnails/about.jpg`}
+>
   <main class="p-[var(--page-margin)]">
     <section
       class="mt-10 grid auto-cols-min auto-rows-min grid-cols-1 gap-0 pb-20 lg:grid-cols-2"
